--- a/GUI/Views/AnimalsView.xaml
+++ b/GUI/Views/AnimalsView.xaml
@@ -5,113 +5,83 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:controls="clr-namespace:GUI.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="720" d:DesignWidth="1130">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition  Width="13*"/>
-            <ColumnDefinition Width="37*"/>
+            <ColumnDefinition  Width="330"/>
+            <ColumnDefinition Width="800"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="7*"/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
             <TextBox Text="{Binding SearchText, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}"/>
-            <ItemsControl 
-                ItemsSource="{Binding FilteredAnimals}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <DockPanel
-                            Background="Aqua"
-                            MouseLeftButtonDown="Animals_MouseLeftButton">
-                            <Label Content="Animal name: "/>
-                            <Label Content="{Binding Name}"/>
-                            <Label Content="Breed: "/>
-                            <Label Content="{Binding Breed.Name}"/>
-                        </DockPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </StackPanel>
+            <ScrollViewer
+                Grid.Row="1"
+                CanContentScroll="True"
+                VerticalScrollBarVisibility="Auto"
+                Height="Auto">
+                <ItemsControl 
+                    ItemsSource="{Binding FilteredAnimals}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <DockPanel
+                                MouseLeftButtonDown="Animals_MouseLeftButton">
+                                <TextBlock Style="{StaticResource ListText}" Text="{Binding Name}"/>
+                                <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="{Binding Breed.Name}"/>
+                            </DockPanel>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+        </Grid>
 
-        <StackPanel
-            Grid.Row="1"
-            Background="BurlyWood">
-            <Button 
-                Content="ADD ANIMAL"
-                Command="{Binding AddAnimalCommand}"/>
-            <Label Content="*Name:"/>
-            <TextBox Text="{Binding EnteredName, Mode=TwoWay}" />
-            <Label Content="Age:"/>
-            <TextBox Text="{Binding EnteredAge, Mode=TwoWay}"
-                     PreviewTextInput="PositiveIntegerTextBox_PreviewTextInput"/>
-            <Label Content="*Gender:"/>
-            <ComboBox ItemsSource="{Binding Genders}"
-                      SelectedItem="{Binding EnteredGender, Mode=TwoWay}" />
-            <Label Content="*Breed:"/>
-            <ComboBox ItemsSource="{Binding Breeds}"
-                      DisplayMemberPath="Name"
-                      SelectedItem="{Binding EnteredBreed, Mode=TwoWay}" />
-            <Label Content="Exterior:"/>
-            <TextBox Text="{Binding EnteredExteriorDescription, Mode=TwoWay}" />
-            <Label Content="Pedigree:"/>
-            <TextBox Text="{Binding EnteredPedigree, Mode=TwoWay}" />
-            <Label Content="Veterinarian:"/>
-            <TextBox Text="{Binding EnteredVeterinarian, Mode=TwoWay}" />
-            <Label Content="Owner:"/>
-            <ComboBox ItemsSource="{Binding Clients}"
-                      DisplayMemberPath="Name"
-                      SelectedItem="{Binding EnteredOwner, Mode=TwoWay}" />
-        </StackPanel>
-
-        <StackPanel
-            Background="HotPink"
-            Grid.Row="0"
-            Grid.Column="1">
-            <StackPanel.Style>
-                <Style TargetType="StackPanel">
-                    <Setter Property="Visibility" Value="Visible" />
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding SelectedAnimal}" Value="{x:Null}">
-                            <Setter Property="Visibility" Value="Hidden" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </StackPanel.Style>
-            <Label Content="Award:"/>
-            <TextBox Text="{Binding EnteredAward, Mode=TwoWay}"/>
-            <Label Content="Competition:"/>
-            <ComboBox 
-                ItemsSource="{Binding AvailableCompetitions}"
-                DisplayMemberPath="Name"
-                SelectedItem="{Binding EnteredCompetition}"/>
-            <Button
-                Content="ADD PARTICIPATION"
-                Command="{Binding AddParticipationCommand}"/>
-            
-            <Label Content="PARTICIPATIONS:"/>
-            <ItemsControl 
-                ItemsSource="{Binding Participations}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <DockPanel
-                            Background="LawnGreen">
-                            <Label Content="Competition name:"/>
-                            <Label Content="{Binding Competition.Name}"/>
-                            <Label Content="Award:"/>
-                            <Label Content="{Binding Award}"/>
-                            <Button Content="DELETE"
-                                    Command="{Binding DataContext.DeleteParticipationCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                    CommandParameter="{Binding}"/>
-                        </DockPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </StackPanel>
+        <ScrollViewer
+            Grid.Row="2"
+            CanContentScroll="True"
+            VerticalScrollBarVisibility="Visible"
+            Height="Auto">
+            <StackPanel
+                x:Name="addAnimalPanel"
+                Grid.Row="2">
+                <Label Content="*Name:"/>
+                <TextBox Text="{Binding EnteredName, Mode=TwoWay}" />
+                <Label Content="Age:"/>
+                <TextBox Text="{Binding EnteredAge, Mode=TwoWay}"
+                    PreviewTextInput="PositiveIntegerTextBox_PreviewTextInput"/>
+                <Label Content="*Gender:"/>
+                <ComboBox ItemsSource="{Binding Genders}"
+                    SelectedItem="{Binding EnteredGender, Mode=TwoWay}" />
+                <Label Content="*Breed:"/>
+                <ComboBox ItemsSource="{Binding Breeds}"
+                    DisplayMemberPath="Name"
+                    SelectedItem="{Binding EnteredBreed, Mode=TwoWay}" />
+                <Label Content="Exterior:"/>
+                <TextBox Text="{Binding EnteredExteriorDescription, Mode=TwoWay}" />
+                <Label Content="Pedigree:"/>
+                <TextBox Text="{Binding EnteredPedigree, Mode=TwoWay}" />
+                <Label Content="Veterinarian:"/>
+                <TextBox Text="{Binding EnteredVeterinarian, Mode=TwoWay}" />
+                <Label Content="Owner:"/>
+                <ComboBox ItemsSource="{Binding Clients}"
+                    DisplayMemberPath="Name"
+                    SelectedItem="{Binding EnteredOwner, Mode=TwoWay}" />
+                <Button 
+                    Style="{StaticResource SmallButton}"
+                    Content="ADD ANIMAL"
+                    Command="{Binding AddAnimalCommand}"/>
+            </StackPanel>
+        </ScrollViewer>
+        
 
         <controls:AnimalProfile
             Grid.Column="1"
-            Grid.Row="1"
+            Grid.Row="0"
             Animal="{Binding DataContext.SelectedAnimal, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             DeleteCommand="{Binding DataContext.DeleteAnimalCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             UpdateCommand="{Binding DataContext.UpdateAnimalCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
@@ -128,6 +98,61 @@
                 </Style>
             </controls:AnimalProfile.Style>
         </controls:AnimalProfile>
+        
+        <Grid
+            Grid.Row="1"
+            Grid.Column="1"
+            Width="400"
+            HorizontalAlignment="Left">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Setter Property="Visibility" Value="Visible" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding SelectedAnimal}" Value="{x:Null}">
+                            <Setter Property="Visibility" Value="Hidden" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+            <StackPanel>
+                <Label Content="Award:"/>
+                <TextBox Text="{Binding EnteredAward, Mode=TwoWay}"/>
+                <Label Content="Competition:"/>
+                <ComboBox 
+                    ItemsSource="{Binding AvailableCompetitions}"
+                    DisplayMemberPath="Name"
+                    SelectedItem="{Binding EnteredCompetition}"/>
+                <Button
+                    Style="{StaticResource SmallButton}"
+                    Content="ADD PARTICIPATION"
+                    Command="{Binding AddParticipationCommand}"/>
+            </StackPanel>
+            <ItemsControl
+                Grid.Row="1"
+                ItemsSource="{Binding Participations}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <DockPanel>
+                            <TextBlock Style="{StaticResource ListText}" Text="Competition:"/>
+                            <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="{Binding Competition.Name}"/>
+                            <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="Award:"/>
+                            <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="{Binding Award}"/>
+                            <Button
+                                Style="{StaticResource SmallButton}"
+                                Width="25"
+                                HorizontalAlignment="Right"
+                                Content="X"
+                                Command="{Binding DataContext.DeleteParticipationCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                CommandParameter="{Binding}"/>
+                        </DockPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </Grid>
 
     </Grid>
 </UserControl>
