--- a/GUI/Views/EmployeesView.xaml
+++ b/GUI/Views/EmployeesView.xaml
@@ -5,41 +5,50 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:controls="clr-namespace:GUI.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="Azure">
+             d:DesignHeight="720" d:DesignWidth="1130">
+    <Grid >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition  Width="13*"/>
-            <ColumnDefinition Width="37*"/>
+            <ColumnDefinition  Width="320"/>
+            <ColumnDefinition Width="800"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
             <TextBox Text="{Binding SearchText, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}"/>
-            <ItemsControl 
-            ItemsSource="{Binding FilteredEmployees}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <DockPanel
-                            Background="Chartreuse"
-                            MouseLeftButtonDown="Employees_MouseLeftButton">
-                            <Label Content="Name: "/>
-                            <Label Content="{Binding Name}"/>
-                            <Label Content="Position: "/>
-                            <Label Content="{Binding Position}"/>
-                        </DockPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </StackPanel>
+            <ScrollViewer
+                Grid.Row="1"
+                CanContentScroll="True"
+                VerticalScrollBarVisibility="Auto"
+                Height="Auto">
+                <ItemsControl 
+                    ItemsSource="{Binding FilteredEmployees}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <DockPanel
+                                MouseLeftButtonDown="Employees_MouseLeftButton">
+                                <TextBlock Style="{StaticResource ListText}" Text="Name: "/>
+                                <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="{Binding Name}"/>
+                                <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="Position: "/>
+                                <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="{Binding Position}"/>
+                            </DockPanel>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+        </Grid>
 
         <StackPanel
-            Grid.Row="1"
-            Background="BurlyWood">
+            Grid.Row="1">
             <Button 
                 Content="ADD EMPLOYEE"
-                Command="{Binding AddEmployeeCommand}"/>
+                Command="{Binding AddEmployeeCommand}"
+                Style="{StaticResource SmallButton}"/>
             <Label Content="Name:"/>
             <TextBox Text="{Binding EnteredName, Mode=TwoWay}" />
             <Label Content="Address:"/>
@@ -50,47 +59,13 @@
             <TextBox Text="{Binding EnteredSalary, Mode=TwoWay}"
                 PreviewTextInput="PositiveDoubleTextBox_PreviewTextInput"/>
         </StackPanel>
-
-        <StackPanel
-            Background="HotPink"
-            Grid.Column="1"
-            Grid.Row="0">
-            <StackPanel.Style>
-                <Style TargetType="StackPanel">
-                    <Setter Property="Visibility" Value="Visible" />
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding SelectedEmployee}" Value="{x:Null}">
-                            <Setter Property="Visibility" Value="Hidden" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </StackPanel.Style>
-            
-            <Label Content="APPLICATIONS:"/>
-            <ItemsControl 
-                ItemsSource="{Binding SelectedEmployee.Applications}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <DockPanel
-                            Background="LawnGreen">
-                            <Label Content="Client:"/>
-                            <Label Content="{Binding Client.Name}"/>
-                            <Label Content="Breed:"/>
-                            <Label Content="{Binding Breed.Name}"/>
-                            <Label Content="Gender:"/>
-                            <Label Content="{Binding Gender}"/>
-                        </DockPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </StackPanel>
-
+        
         <controls:EmployeeProfile
             Employee="{Binding DataContext.SelectedEmployee, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             DeleteCommand="{Binding DataContext.DeleteEmployeeCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             UpdateCommand="{Binding DataContext.UpdateEmployeeCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             Grid.Column="1"
-            Grid.Row="1">
+            Grid.Row="0">
             <controls:EmployeeProfile.Style>
                 <Style TargetType="controls:EmployeeProfile">
                     <Setter Property="Visibility" Value="Visible" />
@@ -102,6 +77,35 @@
                 </Style>
             </controls:EmployeeProfile.Style>
         </controls:EmployeeProfile>
-        
+
+        <StackPanel
+            Grid.Column="1"
+            Grid.Row="1">
+            <StackPanel.Style>
+                <Style TargetType="StackPanel">
+                    <Setter Property="Visibility" Value="Visible" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding SelectedEmployee}" Value="{x:Null}">
+                            <Setter Property="Visibility" Value="Hidden" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </StackPanel.Style>
+            <Label Content="APPLICATIONS:"/>
+            <ItemsControl 
+                ItemsSource="{Binding SelectedEmployee.Applications}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <DockPanel>
+                            <TextBlock Style="{StaticResource ListText}" Text="Client:"/>
+                            <TextBlock Style="{StaticResource ListText}" Text="{Binding Client.Name}"/>
+                            <TextBlock Style="{StaticResource ListText}" Text="Breed:"/>
+                            <TextBlock Style="{StaticResource ListText}" Text="{Binding Breed.Name}"/>
+                        </DockPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </StackPanel>
+
     </Grid>
 </UserControl>
