--- a/GUI/Views/HomeView.xaml
+++ b/GUI/Views/HomeView.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="AliceBlue">
-        <Label Content="HOME"/>
+             d:DesignHeight="720" d:DesignWidth="1130">
+    <Grid>
+        <Label Content="HappyPet.logo"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               FontSize="62"
+               FontWeight="Bold"/>
     </Grid>
 </UserControl>
